update meta data

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>Vartha</title>
   </head>
   <body>
-    <noscript>Malayalam News Live Free</noscript>
+    <noscript>Malayalam News Live Tv</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
